--- a/sass/1-base/_basestyle.sass
+++ b/sass/1-base/_basestyle.sass
@@ -2,7 +2,7 @@
 
 @font-face
   font-family: 'Murky Buzz DEMO'
-  src: url('MurkyBuzzDEMO.eot')
+  src: url('/fonts/MurkyBuzzDEMO.eot')
   src: url('/fonts/MurkyBuzzDEMO.eot?#iefix') format('embedded-opentype'), url('/fonts/MurkyBuzzDEMO.woff') format('woff'), url('/fonts/MurkyBuzzDEMO.ttf') format('truetype')
 
 html, button, input, select, textarea, .pure-g [class *= "pure-u"]
